# watson.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: stable-rust-test.yml  test.yml  watson-rs-compiler-test.yml  watson-rs-core-test.yml  watson-rs-lexer.yml  watson-rs-test.yml
src/: lib.rs  main.rs
watson-rs-compiler/: Cargo.toml
watson-rs-compiler/src/: functions.rs  lib.rs  value_compiler.rs  watson_compiler.rs
watson-rs-compiler/src/instruction_sets/: array.rs  bool.rs  float.rs  global.rs  integer.rs  mod.rs  nil.rs  object.rs  string.rs
watson-rs-compiler/src/tests/: mod.rs  value_compiler.rs  watson_compiler.rs
watson-rs-compiler/tests/: value_compiler.rs  watson_compiler.rs
watson-rs-core/: Cargo.toml
watson-rs-core/src/: error.rs  instruction.rs  instructions.rs  lexeme.rs  lib.rs  mode.rs  state.rs  types.rs
watson-rs-lexer/: Cargo.toml
watson-rs-lexer/src/: error.rs  evaluator.rs  lexer.rs  lib.rs  scanner.rs
watson-rs-runtime/: Cargo.toml
watson-rs-runtime/src/: lib.rs  operations.rs  runtime.rs
