[package]
name = "watson-rs"
version = "0.1.0"
authors = [ "panda" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "watson-rs-core",
    "watson-rs-lexer",
    "watson-rs-compiler"
]

[dependencies]
# https://doc.rust-lang.org/cargo/reference/features.html
# https://doc.rust-lang.org/book/ch14-03-cargo-workspaces.html
watson-rs-core     = { path = "watson-rs-core"     }
watson-rs-lexer    = { path = "watson-rs-lexer"    }
watson-rs-compiler = { path = "watson-rs-compiler" }
