[package]
name = "watson-rs-compiler"
version = "0.1.0"
authors = ["Tobiky <andreas.hammarstrand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watson-rs-core = { path = "../watson-rs-core", default-features = false }
ascii = "1.0.0"
