[package]
name = "watson-rs-core"
version = "0.1.0"
authors = ["panda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }
serde = { version = "1.0", optional = true, features = [ "derive" ] } 

[features]
json = [ 
    "serde",
    "serde_json" 
]

yaml = [
    "serde",
    "serde_yaml"
]

toml = [
    "serde",
    "dep:toml"
]

full = [
    "json",
    "yaml",
    "toml"
]

default = [ "json" ]

