[package]
name = "watson-rs-core"
version = "0.1.0"
authors = ["panda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = [ "derive" ] } 

[features]
default = [ "serde" ]