[package]
name = "watson-rs-core"
version = "0.1.0"
authors = ["panda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = [ "derive" ] } 
thiserror = { workspace = true }
derive_more = { workspace = true, features = [ "try_from", "try_unwrap" ]}

[features]
default = [ "serde" ]

[dev-dependencies]
serde_yaml = "0.8"
serde_json = "1.0"
toml       = "0.5"
