[package]
name = "watson-rs-lexer"
version = "0.1.0"
authors = ["panda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
watson-rs-core = { path = "../watson-rs-core", default-features = false }
