[package]
name = "watson-rs-runtime"
version = "0.1.0"
authors = ["panda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
watson-rs-core = { path = "../watson-rs-core" }
watson-rs-convert = { path = "../watson-rs-convert" }
